# DRXFramework

./: DRX.upp  Doxyfile  LICENSE.md  README.md
.git___/: COMMIT_EDITMSG  index
.git___/info/: refs
.git___/logs/: HEAD
docs/: CMake API.md  README.md
docs/doxygen/: Doxyfile  Makefile  process_source_files.py
examples/Assets/: DSPDemos_Common.h  drx_module_info
examples/Audio/: AudioAppDemo.h  AudioLatencyDemo.h  AudioPlaybackDemo.h  AudioRecordingDemo.h  AudioSettingsDemo.h  AudioSynthesiserDemo.h  AudioWorkgroupDemo.h  CapabilityInquiryDemo.h  MPEDemo.h  MidiDemo.h  PluckedStringsDemo.h  SimpleFFTDemo.h
examples/DSP/: ConvolutionDemo.h  FIRFilterDemo.h  GainDemo.h  IIRFilterDemo.h  OscillatorDemo.h  OverdriveDemo.h  SIMDRegisterDemo.h  StateVariableFilterDemo.h  WaveShaperTanhDemo.h
examples/DemoRunner/: CMakeLists.txt  DemoRunner.jucer  DemoRunner.upp
examples/GUI/: AccessibilityDemo.h  AnimationAppDemo.h  AnimationEasingDemo.h  AnimatorsDemo.h  BouncingBallWavetableDemo.h  CameraDemo.h  CodeEditorDemo.h  ComponentDemo.h  ComponentTransformsDemo.h  DialogsDemo.h  FlexBoxDemo.h  FontsDemo.h  GraphicsDemo.h  GridDemo.h  HelloWorldDemo.h  ImagesDemo.h  KeyMappingsDemo.h  LookAndFeelDemo.h  MDIDemo.h  MenusDemo.h  MultiTouchDemo.h  OpenGLAppDemo.h  OpenGLDemo.h  OpenGLDemo2D.h  PropertiesDemo.h  VideoDemo.h  WebBrowserDemo.h  WidgetsDemo.h  WindowsDemo.h
examples/Plugins/: ARAPluginDemo.h  AUv3SynthPluginDemo.h  ArpeggiatorPluginDemo.h  AudioPluginDemo.h  DSPModulePluginDemo.h  GainPluginDemo.h  HostPluginDemo.h  MidiLoggerPluginDemo.h  MultiOutSynthPluginDemo.h  NoiseGatePluginDemo.h  ReaperEmbeddedViewPluginDemo.h  SamplerPluginDemo.h  SurroundPluginDemo.h  WebViewPluginDemo.h
examples/Utilities/: AnalyticsCollectionDemo.h  Box2DDemo.h  CMakeLists.txt  ChildProcessDemo.h  CryptographyDemo.h  InAppPurchasesDemo.h  JavaScriptDemo.h  LiveConstantDemo.h  MultithreadingDemo.h  NetworkingDemo.h  OSCDemo.h  PushNotificationsDemo.h  SystemInfoDemo.h  TimersAndEventsDemo.h  UnitTestsDemo.h  ValueTreesDemo.h  XMLandJSONDemo.h
extras/AudioPerformanceTest/: AudioPerformanceTest.jucer  CMakeLists.txt
extras/AudioPerformanceTest/Builds/Android/app/: CMakeLists.txt  build.gradle
extras/AudioPerformanceTest/Builds/LinuxMakefile/: Makefile
extras/AudioPerformanceTest/Builds/MacOSX/: Info-App.plist
extras/AudioPerformanceTest/Builds/MacOSX/AudioPerformanceTest.xcodeproj/: project.pbxproj
extras/AudioPerformanceTest/Builds/VisualStudio2022/: AudioPerformanceTest_App.vcxproj  AudioPerformanceTest_App.vcxproj.filters  resources.rc
extras/AudioPerformanceTest/Builds/iOS/: Info-App.plist
extras/AudioPerformanceTest/Builds/iOS/AudioPerformanceTest.xcodeproj/: project.pbxproj
extras/AudioPerformanceTest/JuceLibraryCode/: JuceHeader.h  include_juce_audio_basics.cpp  include_juce_audio_basics.mm  include_juce_audio_formats.mm  include_juce_audio_processors.mm  include_juce_core_CompilationTime.cpp
extras/AudioPerformanceTest/Source/: Main.cpp  MainComponent.h
extras/AudioPluginHost/: AudioPluginHost.jucer  CMakeLists.txt
extras/AudioPluginHost/Builds/Android/app/: CMakeLists.txt  build.gradle
extras/AudioPluginHost/Builds/Android/app/src/main/assets/: AudioLiveScrollingDisplay.h  DemoUtilities.h  WavefrontObjParser.h  webviewplugin-gui-fallback.html
extras/AudioPluginHost/Builds/Android/app/src/main/assets/Box2DTests/: ApplyForce.h  Bridge.h  Car.h  CollisionProcessing.h  CompoundShapes.h  DumpShell.h  EdgeShapes.h  OneSidedPlatform.h  PolyCollision.h  PolyShapes.h  Revolute.h  Rope.h  RopeJoint.h  ShapeEditing.h  SliderCrank.h  TheoJansen.h  TimeOfImpact.h  Web.h
extras/AudioPluginHost/Builds/LinuxMakefile/: Makefile
extras/AudioPluginHost/Builds/MacOSX/: Info-App.plist
extras/AudioPluginHost/Builds/MacOSX/AudioPluginHost.xcodeproj/: project.pbxproj
extras/AudioPluginHost/Builds/VisualStudio2019/: AudioPluginHost_App.vcxproj  AudioPluginHost_App.vcxproj.filters  resources.rc
extras/AudioPluginHost/Builds/VisualStudio2022/: AudioPluginHost_App.vcxproj  AudioPluginHost_App.vcxproj.filters
extras/AudioPluginHost/Builds/iOS/: Info-App.plist
extras/AudioPluginHost/Builds/iOS/AudioPluginHost.xcodeproj/: project.pbxproj
extras/AudioPluginHost/DrxLibraryCode/: BinaryData.cpp  BinaryData.h  DrxHeader.h  include_juce_audio_utils.mm  include_juce_dsp.mm  include_juce_gui_basics.cpp  include_juce_gui_extra.cpp  include_juce_gui_extra.mm
extras/AudioPluginHost/Source/: HostStartup.cpp
extras/AudioPluginHost/Source/Plugins/: ARAPlugin.cpp  ARAPlugin.h  IOConfigurationWindow.cpp  IOConfigurationWindow.h  InternalPlugins.cpp  InternalPlugins.h  PluginGraph.cpp  PluginGraph.h
extras/AudioPluginHost/Source/UI/: GraphEditorPanel.cpp  GraphEditorPanel.h  MainHostWindow.cpp  MainHostWindow.h  PluginWindow.h
extras/BinaryBuilder/: BinaryBuilder.jucer  CMakeLists.txt
extras/NetworkGraphicsDemo/: CMakeLists.txt  NetworkGraphicsDemo.jucer  README.txt
extras/UnitTestRunner/: CMakeLists.txt  UnitTestRunner.jucer
extras/UnitTestRunner/Builds/LinuxMakefile/: Makefile
extras/UnitTestRunner/Builds/MacOSX/UnitTestRunner.xcodeproj/: project.pbxproj
extras/UnitTestRunner/Builds/VisualStudio2019/: UnitTestRunner_ConsoleApp.vcxproj  UnitTestRunner_ConsoleApp.vcxproj.filters  resources.rc
extras/UnitTestRunner/Builds/VisualStudio2022/: UnitTestRunner_ConsoleApp.vcxproj  UnitTestRunner_ConsoleApp.vcxproj.filters
extras/UnitTestRunner/JuceLibraryCode/: JuceHeader.h  include_juce_analytics.cpp  include_juce_audio_processors_lv2_libs.cpp  include_juce_audio_utils.cpp  include_juce_cryptography.mm  include_juce_data_structures.cpp  include_juce_dsp.cpp  include_juce_graphics.cpp  include_juce_graphics_Sheenbidi.c  include_juce_midi_ci.cpp  include_juce_opengl.mm  include_juce_osc.cpp  include_juce_product_unlocking.cpp  include_juce_product_unlocking.mm
extras/UnitTestRunner/Source/: Main.cpp
html/: doxygen_crawl.html  md_LICENSE.html  md_README.html  navtreedata.js  navtreeindex0.js  pages.html
latex/: md_LICENSE.tex  md_README.tex  refman.tex
(+3045 files in other folders)
